--- a/bwapp/client/index.html
+++ b/bwapp/client/index.html
@@ -5,6 +5,8 @@
    <meta name="description" content="{{app.description}}">
    <meta name="keywords" content="app, responsive, angular, bootstrap, dashboard, admin">
    <title data-ng-bind="::pageTitle()">Angle - Angular Bootstrap Admin Template</title>
+   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body data-ng-class="{ 'layout-fixed' : app.layout.isFixed,'aside-collapsed' : app.layout.isCollapsed,'layout-boxed' : app.layout.isBoxed,'layout-fs': app.useFullLayout,'hidden-footer': app.hiddenFooter,'layout-h':  app.layout.horizontal,'aside-float':   app.layout.isFloat}">
