--- a/bwapp/client/index.html
+++ b/bwapp/client/index.html
@@ -4,7 +4,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
    <meta name="description" content="{{app.description}}">
    <meta name="keywords" content="app, responsive, angular, bootstrap, dashboard, admin">
-   <title data-ng-bind="::pageTitle()">Angle - Angular Bootstrap Admin Template</title>
+   <title data-ng-bind="::pageTitle()">Block World</title>
    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
